# nongle

./: .env.dist  .gitignore  Cargo.toml  README.md  bundler.toml  justfile
engine/: Cargo.toml
engine/src/: lib.rs  note.rs  que.rs  sample.rs  state.rs
nih_plug_iced/: Cargo.toml
src/: engines.rs  main.bkup  main.rs  note.rs  que.rs  sample.rs  template.rs  utils.rs
src/performer/: convert.rs  mello.rs  mod.rs  note.rs  que.rs
src/que/: mod.rs
standalone/: .gitignore  Cargo.toml  que.py
standalone/src/: main.rs  que.rs
vst/: Cargo.toml
vst/src/: editor.rs  lib.rs
