[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
rodio = "0.18.0"
cpal = "0.15.2"
midir = "0.10.0"
clap = { version = "4.0", features = ["derive"] }
