[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
midir = "0.10.2"
clap = { version = "4.0", features = ["derive"] }
engine = { path = "../engine" }
log = "0.4.27"
env_logger = "0.11.8"
