[package]
name = "vst"
version = "0.1.0"
edition = "2021"
authors = ["oilcake tv <oilpie@gmail.com>"]
license = "ISC"
description = "Nongle - dynamically layered sampler"

[lib]
crate-type = ["cdylib"]

[dependencies]
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [] }
engine = { path = "../engine" }
nih_plug_iced = { path = "../nih_plug_iced" }
atomic_float = "1.1.0"
